--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,3 +5,6 @@ jobs:
     steps: 
       - run: node --version
       - run: npm --version
+      - uses: actions/checkout@v4
+      - run: npm install
+      - run: app.js
