--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,27 @@
 name: Node Continuous integration
-on: push
+on: 
+  workflow_dispatch:
+  
 jobs: 
   first-job: 
     runs-on: ubuntu-latest
     steps: 
       - run: node --version
         name: Check Node verion
-      - run: npm --version
-        name: Check npm --version
-      - uses: actions/checkout@v4
-        name: Checkout code from github
-      - run: npm install
-        name: Install NPM packages
-      - run: node app.js
-        name: Run Node apllication
+      - name: create txt file
+        run: |
+          echo "hello world" >> "${{github_workplace }}/data.txt"
+          ls -la
+          cat "${{github_workplace }}/data.txt"
+
+  second-job:
+    runs-on: ubuntu-latest
+    needs: first-job
+    steps: 
+      - run: |
+          ls -la
+          cat "${{github_workplace }}/data.txt"
+        name: print the data 
+    
+    
+      
