--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,16 +1,17 @@
 name: testing workspace usage
-on: 
+'on': 
+  push
   workflow_dispatch:
   
 jobs: 
   first-job: 
     runs-on: ubuntu-latest
     steps: 
-      - run: node --version
-        name: Check Node verion
+      - name: Check Node verion
+        run: node --version
       - name: create txt file
         run: |
-          echo "hello world" >> "${{github.workspace }}/data.txt"
+          echo "hello world" > "${{github.workspace }}/data.txt"
           ls -la
           cat "${{github_workspace }}/data.txt"
 
@@ -18,10 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: first-job
     steps: 
-      - run: |
+      - name: print the data 
+        run: |
           ls -la
           cat "${{github.workspace }}/data.txt"
-        name: print the data 
-    
-    
-      
