--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,23 +3,30 @@ name: Share data between jobs
 on: [push]
 
 jobs:
-  job_1:
-    name: Add 3 and 7
-    runs-on: ubuntu-latest
+  cypress_tests:
+    runs-on: ubuntu
+    strategy:
+      fail-fast: false
+      matrix:
+        subset: ["1", "2", "3","4"]
     steps:
       - shell: bash
         run: |
+          mkdir -p /github/workspace/coverage/${{ matrix.subset }} 
+          mkdir -p /test_coverage
+          cd test_coverage
           expr 3 + 7 > math-homework.txt
+          cd ..
+          cp -R test_coverage/math-homework.txt /github/workspace/coverage/${{ matrix.subset }}   # Move coverage report to shared directory
       - name: Upload math result for job 1
         uses: actions/upload-artifact@v4
         with:
           name: homework_pre
-          path: math-homework.txt
-
+          path: /github/workspace/coverage/${{ matrix.subset }}/math-homework.txt
   job_2:
     name: Multiply by 9
-    needs: job_1
-    runs-on: windows-latest
+    needs: cypress_tests
+    runs-on: ubuntu
     steps:
       - name: Download math result for job 1
         uses: actions/download-artifact@v4
@@ -27,25 +34,6 @@ jobs:
           name: homework_pre
       - shell: bash
         run: |
+          ls -la
           value=`cat math-homework.txt`
           expr $value \* 9 > math-homework.txt
-      - name: Upload math result for job 2
-        uses: actions/upload-artifact@v4
-        with:
-          name: homework_final
-          path: math-homework.txt
-
-  job_3:
-    name: Display results
-    needs: job_2
-    runs-on: macOS-latest
-    steps:
-      - name: Download math result for job 2
-        uses: actions/download-artifact@v4
-        with:
-          name: homework_final
-      - name: Print the final result
-        shell: bash
-        run: |
-          value=`cat math-homework.txt`
-          echo The result is $value
