--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: homework_pre
-          path: coverage/${{ matrix.subset }}/math-homework.txt
+          path: coverage-${{ matrix.subset }}/math-homework.txt
   job_2:
     name: Multiply by 9
     needs: cypress_tests
@@ -31,7 +31,7 @@ jobs:
       - name: Download math result for job 1
         uses: actions/download-artifact@v4
         with:
-          pattern: coverage/*
+          pattern: coverage-*
           merge-multiple: true
       - shell: bash
         run: |
