--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Upload math result for job 1
         uses: actions/upload-artifact@v4
         with:
-          name: homework_pre
-          path: coverage-${{ matrix.subset }}/math-homework.txt
+          name: coverage-${{ matrix.subset }}
+          path: coverage/${{ matrix.subset }}/math-homework.txt
   job_2:
     name: Multiply by 9
     needs: cypress_tests
