--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: coverage-${{ matrix.subset }}
-          path: coverage/${{ matrix.subset }}/math-homework.txt
+          path: coverage
   job_2:
     name: Multiply by 9
     needs: cypress_tests
