--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,3 +39,4 @@ jobs:
           cd 1
           value=`cat math-homework.txt`
           expr $value \* 9 > math-homework.txt
+          echo The result is $value
