--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,13 @@
 name: Share data between jobs
 
-on: [push]
+on:
+  pull_request:
+    types: [synchronize]
+  issue_comment:
 
 jobs:
   cypress_tests:
+    if: github.event_name == 'pull_request' && contains(github.event.pull_request.body, 'test this please')
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
