--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
     types: [created]
 jobs:
   cypress_tests:
-    if: github.event.comment.body == 'test this please'
+    if: contains(github.event.comment.body, 'test this please')
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
