--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   cypress_tests:
-    if: github.event_name == 'pull_request' && contains(github.event.pull_request.body, 'test this please')
+    if: contains(github.event.pull_request.body, 'test this please')
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
